# workforce-monitoring-agent

./: .gitignore  CMakeLists.txt  Makefile  README.md  TODO.md  requirements.txt  test_activities.py  test_productivity.py  upgrade_config.json
content/: blog_post.md  linkedin_post.txt  twitter_post.txt
docs/: API_DOCUMENTATION.md  ARCHITECTURE.md  CONFIGURATION.md  DEVELOPER_GUIDE.md  INSTALLATION.md  TROUBLESHOOTING.md  USER_MANUAL.md
include/: activity_monitor.h  behavior_analyzer.h  dlp_monitor.h  llm_behavior_analyzer.h  time_tracker.h  upgrade_manager.h
installers/: README_backend.md  install_agent.sh  install_backend.sh  test_backend_install.sh
src/agent/: activity_monitor.cpp  behavior_analyzer.cpp  dlp_monitor.cpp  llm_behavior_analyzer.cpp  main.cpp  time_tracker.cpp  upgrade_manager.cpp
src/backend/: app.py
src/backend/notes/: BELEJKI.txt
src/frontend/: index.html
